# ML-Predict-POC

./: pyproject.toml
house_sales/: Decision Tree.ipynb  K-Nearest Neighbors.ipynb  Linear Regression.ipynb
house_sales/.ipynb_checkpoints/: Decision Tree-checkpoint.ipynb
house_sales/dataset/: kc_house_data (Decision Tree).xlsx
